--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,3 +1,4 @@
+
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles",bCanModify=True)
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
@@ -26,6 +27,8 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPerson",NewGameName="/Script/Section_05")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPerson",NewGameName="/Script/Section_05")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Section_05")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Section_05")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonProjectile",NewClassName="Section_05Projectile")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonHUD",NewClassName="Section_05HUD")
 +ActiveClassRedirects=(OldClassName="TP_FirstPersonGameMode",NewClassName="Section_05GameMode")
