Added the first C++ Class - ChooseNextWaypoint, and have created our C++ version of our Task

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,3 +5,5 @@ ProjectName=First Person Template
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=EF0F1F394E29EA9D20DAFCA88C2BE9BE
+CopyrightNotice=Copyright Oliver Scott 2019
+
